--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.11",
+    "@types/react": "^18.0.14",
     "@types/react-slider": "^1.3.1",
     "@types/react-table": "^7.7.9",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -212,6 +212,7 @@
   ],
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "cids": "^1.1.9",
     "formik": "^2.2.9",
     "react-bootstrap": "^2.4.0",
     "react-copy-to-clipboard": "^5.1.0",
