--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-loader-spinner": "^5.1.5",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.53.0"
