--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "react-bootstrap": "^2.4.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-loader-spinner": "^5.1.5",
+    "react-number-format": "^4.9.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
