--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
     "react-number-format": "^4.9.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.3.0",
+    "react-simple-snackbar": "^1.1.11",
     "react-toastify": "^9.0.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.53.0"
