--- a/package.json
+++ b/package.json
@@ -214,9 +214,11 @@
     "bootstrap": "^5.1.3",
     "cids": "^1.1.9",
     "formik": "^2.2.9",
+    "moralis": "^1.9.0",
     "react-bootstrap": "^2.4.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-loader-spinner": "^5.1.5",
+    "react-moralis": "^1.4.0",
     "react-number-format": "^4.9.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.3.0",
