--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "react-simple-snackbar": "^1.1.11",
     "react-toastify": "^9.0.5",
     "redux-saga": "^1.1.3",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "timeago-react": "^3.0.5"
   }
 }
