--- a/package.json
+++ b/package.json
@@ -211,6 +211,8 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@shibarium/core-sdk": "^1.0.0",
+    "@shibarium/sdk": "^1.0.2",
     "bootstrap": "^5.1.3",
     "cids": "^1.1.9",
     "formik": "^2.2.9",
