--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,6 @@
     "downlevelIteration": true,
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/hooks/useTokenPrice.js", "src/pages/important-popup/index.js"],
   "exclude": ["node_modules"]
 }
