--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@shibarium/core-sdk": "^1.0.5",
     "bootstrap": "^5.1.3",
     "cids": "^1.1.9",
