--- a/package.json
+++ b/package.json
@@ -216,6 +216,7 @@
     "bootstrap": "^5.1.3",
     "cids": "^1.1.9",
     "formik": "^2.2.9",
+    "from-exponential": "^1.1.1",
     "moralis": "1.5.4",
     "moralis-v1": "^1.11.0",
     "react-bootstrap": "^2.4.0",
