--- a/package.json
+++ b/package.json
@@ -227,6 +227,8 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.3.0",
+    "react-shimmer": "^3.2.0",
+    "react-shimmer-effects": "^1.0.2",
     "react-simple-snackbar": "^1.1.11",
     "react-toastify": "^9.0.5",
     "redux-saga": "^1.1.3",
