--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
   ],
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
     "@shibarium/core-sdk": "^1.0.5",
     "bootstrap": "^5.1.3",
     "cids": "^1.1.9",
