--- a/package.json
+++ b/package.json
@@ -213,11 +213,14 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "@shibarium/core-sdk": "^1.0.5",
     "bootstrap": "^5.2.1",
     "cids": "^1.1.9",
     "formik": "^2.2.9",
     "from-exponential": "^1.1.1",
+    "i": "^0.3.7",
     "moralis": "1.5.4",
     "moralis-v1": "^1.11.0",
     "react-bootstrap": "^2.5.0",
