--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@react-hook/window-scroll": "^1.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/browser": "^6.15.0",
-    "@sentry/nextjs": "^6.13.0",
+    "@sentry/nextjs": "^7.15.0",
     "@sentry/tracing": "^6.15.0",
     "@sushiswap/bentobox-sdk": "1.0.0-canary.48",
     "@sushiswap/chainlink-whitelist": "0.2.8",
@@ -213,6 +213,7 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
+    "@sentry/wizard": "^2.2.2",
     "@shibarium/core-sdk": "^1.0.5",
     "bootstrap": "^5.2.1",
     "cids": "^1.1.9",
