--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
     "moralis-v1": "^1.11.0",
     "react-bootstrap": "^2.5.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-loader-spinner": "^5.1.5",
     "react-moralis": "1.3.2",
     "react-number-format": "^4.9.3",
