--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/node": "^16.11.0",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.14",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-slider": "^1.3.1",
     "@types/react-table": "^7.7.9",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -226,6 +227,7 @@
     "react-bootstrap": "^2.5.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-loader-spinner": "^5.1.5",
     "react-moralis": "1.3.2",
     "react-number-format": "^4.9.3",
