--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "react-toastify": "^9.0.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.53.0",
+    "shibarium-chains": "^1.0.0",
     "timeago-react": "^3.0.5",
     "web3": "^1.8.0"
   }
