--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "7.0.2-alpha.0",
+    "@web3-react/walletconnect-connector": "^7.0.2-alpha.0",
     "@web3-react/walletlink-connector": "^6.2.11",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "autoprefixer": "^10.4.12",
