--- a/package.json
+++ b/package.json
@@ -148,8 +148,11 @@
     "@sentry/nextjs": "^7.21.0",
     "@sentry/utils": "^7.15.0",
     "@sentry/wizard": "^2.2.2",
+    "@web3modal/ethereum": "^2.0.0-beta.10",
+    "@web3modal/react": "^2.0.0-beta.10",
     "bootstrap": "^5.2.1",
     "cids": "^1.1.9",
+    "ethers": "^5.7.2",
     "formik": "^2.2.9",
     "from-exponential": "^1.1.1",
     "i": "^0.3.7",
@@ -171,6 +174,7 @@
     "sass": "^1.56.1",
     "shibarium-chains": "^1.0.0",
     "timeago-react": "^3.0.5",
+    "wagmi": "^0.9.5",
     "web3": "^1.8.0",
     "yarn": "^1.22.19"
   }
