--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "redux-saga": "^1.1.3",
     "sass": "^1.56.1",
     "shibarium-chains": "^1.0.0",
+    "shibarium-get-chains": "^1.0.0",
     "timeago-react": "^3.0.5",
     "wagmi": "^0.9.5",
     "web3": "^1.8.0",
