--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "inspect": "NODE_OPTIONS='--inspect' next dev",
     "build": "yarn lingui && next build",
+    "export": "next export",
     "start": "next start -p 3000",
     "lingui": "lingui extract --clean --overwrite && lingui compile",
     "circular": "madge --circular src --extensions ts,tsx,js,jsx",
