--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "e2e:run": "yarn jest --testPathPattern=test/e2e --runInBand",
     "e2e:safe": "wait-on -l http://localhost:3000 && yarn e2e:run",
     "e2e": "concurrently -k -s first -n \"app,e2e\" \"yarn dev\" \"yarn e2e:safe\"",
-    "postinstall": "yarn lingui",
-    "export" : "next export"
+    "postinstall": "yarn lingui"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -154,6 +153,7 @@
     "@web3modal/react": "^2.0.0-beta.10",
     "bootstrap": "^5.2.1",
     "cids": "^1.1.9",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
     "from-exponential": "^1.1.1",
