added infinite scroll library in manage tokens

--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "react-bootstrap": "^2.5.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.1.5",
     "react-number-format": "^4.9.3",
     "react-perfect-scrollbar": "^1.5.8",
