--- a/.env
+++ b/.env
@@ -16,32 +16,32 @@ DEPOSIT_MANAGER_PROXY=0xcc9B49D63ed0c0dF6A84cB7087eC284E0Ea7bd2F
 WITHDRAW_MANAGER_PROXY=0x7be6A3798C3b6A236CcE38f7c4dd26A0A431656c
 
 # Infura or Alchemy http node
-ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/vY1XVqLyDxmuHJDGdBCKBBa6WdUSRRCO
+NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/vY1XVqLyDxmuHJDGdBCKBBa6WdUSRRCO
 
 # Shibarium RPC http node
-CHILD_RPC_HTTP=https://rpc-dev.analytics-shibaswap.com
-HEIMDALL_RPC=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:26657
-HEIMDALL_REST=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:1317
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://rpc-dev.analytics-shibaswap.com
+NEXT_PUBLIC_HEIMDALL_RPC=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:26657
+NEXT_PUBLIC_HEIMDALL_REST=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:1317
 
 # Wallet mnemonic
-MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
+NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
 
 # Network info
-NET_NAME=alpha
-NET_VERS=v5
+NEXT_PUBLIC_NET_NAME=alpha
+NEXT_PUBLIC_NET_VERS=v5
 
 # Admin wallet used to deploy contracts and run admin commands
-ADMIN_WALLET=0x0c31C42dBd5cA4Bd02b0aA5977d2Cab5A0FE948a
+NEXT_PUBLIC_ADMIN_WALLET=0x0c31C42dBd5cA4Bd02b0aA5977d2Cab5A0FE948a
 
 # Number of accounts to load into HDWalletProvider. If blank, defaults to 50
-PROVIDER_NUM_ACCOUNTS=30
+NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 
 # Proof Generator API
-PROOF_API_URL=http:3.85.222.188:5000
+NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-STAKING_API_URL=http://dev-517-api.hailshiba.com
+NEXT_PUBLIC_STAKING_API_URL=http://dev-517-api.hailshiba.com
 # ABI/Contract address API
-ABI_API_URL=http://shib-abi-api.s3-website.ap-south-1.amazonaws.com
+NEXT_PUBLIC_ABI_API_URL=http://shib-abi-api.s3-website.ap-south-1.amazonaws.com
 
 # Service health check timeout, in ms
-HEALTH_CHECK_TIMOUT=5000
+NEXT_PUBLIC_HEALTH_CHECK_TIMOUT=5000
