--- a/package.json
+++ b/package.json
@@ -151,6 +151,8 @@
     "@sentry/wizard": "^2.2.2",
     "@shibarmy/shibariumjs": "^0.1.0",
     "@shibarmy/shibariumjs-plasma": "^0.1.0",
+    "@shibarmy/shibariumjs-web3": "^0.1.0",
+    "@truffle/hdwallet-provider": "^2.1.5",
     "@web3modal/ethereum": "^2.0.0-beta.10",
     "@web3modal/react": "^2.0.0-beta.10",
     "bootstrap": "^5.2.1",
