withdraw contract with new rpc

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-517/v0.0.2 
 
 # RPC URL 517 latest
-RPC_517=https://rpc-dev.analytics-shibaswap.com 
+RPC_517=http://54.225.50.186:8545
 
 # chain id 5 contracts 
 BONE=0x664456257bC8cfFc605C74Ab8Fea6bd04CCe3BB6
@@ -19,7 +19,7 @@ WITHDRAW_MANAGER_PROXY=0x7be6A3798C3b6A236CcE38f7c4dd26A0A431656c
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/vY1XVqLyDxmuHJDGdBCKBBa6WdUSRRCO
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https://rpc-dev.analytics-shibaswap.com
+NEXT_PUBLIC_CHILD_RPC_HTTP=http://54.225.50.186:8545
 NEXT_PUBLIC_HEIMDALL_RPC=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:26657
 NEXT_PUBLIC_HEIMDALL_REST=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:1317
 
