--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@
 SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-517/v0.0.2 
 
 # RPC URL 517 latest
-RPC_517=https://rpc-dev.analytics-shibaswap.com 
+RPC_517=http://54.225.50.186:8545
 
 # chain id 517 contracts 
 BONE=0x664456257bC8cfFc605C74Ab8Fea6bd04CCe3BB6
