Withdraw function working for plasma and pos

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ VALIDATOR_SHARE=0x4df6227ce5F18B5278C3CB393E81B253c85028aE
 STAKE_MANAGER=0xb2BDD3494A16A83c74474419ec1485FBE6fa6755
 DEPOSIT_MANAGER_PROXY=0xcc9B49D63ed0c0dF6A84cB7087eC284E0Ea7bd2F
 WITHDRAW_MANAGER_PROXY=0x7be6A3798C3b6A236CcE38f7c4dd26A0A431656c
-
+ROOTCHAIN_MANAGER_PROXY=0xDE1203ab41b3E4920A99Ea427E71D19Ae46696C3
 # Infura or Alchemy http node
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/vY1XVqLyDxmuHJDGdBCKBBa6WdUSRRCO
 
