--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-917/v0.0.2 
 
 # RPC URL 517 latest
-RPC_517=https://rpc-dev.analytics-shibaswap.com
+RPC_517=https://puppynet.shibrpc.com
 
 # chain id 5 contracts 
 BONE=0x664456257bC8cfFc605C74Ab8Fea6bd04CCe3BB6
@@ -19,9 +19,9 @@ ROOTCHAIN_MANAGER_PROXY=0xDE1203ab41b3E4920A99Ea427E71D19Ae46696C3
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/vY1XVqLyDxmuHJDGdBCKBBa6WdUSRRCO
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https://rpc-dev.analytics-shibaswap.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:26657
-NEXT_PUBLIC_HEIMDALL_REST=http://dev-rpc-1-1b8cb1cf8d2ebbc9.elb.us-east-1.amazonaws.com:1317
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppynet.shibrpc.com
+NEXT_PUBLIC_HEIMDALL_RPC=http://preprod-rpc-1-e66d662f4e7b1609.elb.us-east-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://preprod-rpc-1-e66d662f4e7b1609.elb.us-east-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
@@ -39,9 +39,10 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-NEXT_PUBLIC_STAKING_API_URL=http://dev-517-api.hailshiba.com
+NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
+
 # ABI/Contract address API
-NEXT_PUBLIC_ABI_API_URL=http://shib-abi-api.s3-website.ap-south-1.amazonaws.com
+NEXT_PUBLIC_ABI_API_URL=https://puppynet-abi.s3.amazonaws.com
 
 # Service health check timeout, in ms
 NEXT_PUBLIC_HEALTH_CHECK_TIMOUT=5000
