UI issues fixed, added min stake amount in env

--- a/.env
+++ b/.env
@@ -47,3 +47,6 @@ NEXT_PUBLIC_ABI_API_URL=https://puppynet-abi.s3.amazonaws.com
 
 # Service health check timeout, in ms
 NEXT_PUBLIC_HEALTH_CHECK_TIMOUT=5000
+
+# Minimum stake for amount
+NEXT_PUBLIC_MIN_STAKE_AMOUNT=10
