--- a/.env
+++ b/.env
@@ -50,3 +50,6 @@ NEXT_PUBLIC_HEALTH_CHECK_TIMOUT=5000
 
 # Minimum stake for amount
 NEXT_PUBLIC_MIN_STAKE_AMOUNT=10
+
+# Recaptcha site key
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdDZXQiAAAAAPUZI155WAGKKhM1vACSu05hOLGP
