--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@
 SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-917-v1/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppynet.shibrpc.com
+RPC_517=https://puppynet1.shibrpc.com
 
 # chain id 517 contracts 
 BONE=0xBC071C64eD8F536011c78e847755680740d6b73C
