--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-917-v1/v0.0.1
+SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-719/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppynet1.shibrpc.com
+RPC_517=https://puppynet.shibrpc.com
 
 #  chain id 917 contracts
 BONE=0x76C2BA387d39A2B3A214E0Ba1819782369F684c1
@@ -21,8 +21,8 @@ NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/xv2JiP-gGcBNnTwaqO
 
 # Shibarium RPC http node
 NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppynet.shibrpc.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://preprod-rpc-1-e66d662f4e7b1609.elb.us-east-1.amazonaws.com:26657/
-NEXT_PUBLIC_HEIMDALL_REST=http://preprod-rpc-1-e66d662f4e7b1609.elb.us-east-1.amazonaws.com:1317/
+NEXT_PUBLIC_HEIMDALL_RPC=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
