--- a/.env.local
+++ b/.env.local
@@ -2,10 +2,10 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-917-v1/v0.0.1
+SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-719/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppynet1.shibrpc.com
+RPC_517=https://puppynet.shibrpc.com
 
 # chain id 517 contracts 
 BONE=0x76C2BA387d39A2B3A214E0Ba1819782369F684c1
