--- a/.env
+++ b/.env
@@ -28,8 +28,8 @@ NEXT_PUBLIC_HEIMDALL_REST=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
 
 # Network info
-NEXT_PUBLIC_NET_NAME=alpha
-NEXT_PUBLIC_NET_VERS=v5
+NEXT_PUBLIC_NET_NAME=beta
+NEXT_PUBLIC_NET_VERS=v2
 
 # Admin wallet used to deploy contracts and run admin commands
 NEXT_PUBLIC_ADMIN_WALLET=0x0c31C42dBd5cA4Bd02b0aA5977d2Cab5A0FE948a
@@ -40,7 +40,7 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
+NEXT_PUBLIC_STAKING_API_URL=https://preprod-api1.shib.io
 
 # ABI/Contract address API
 NEXT_PUBLIC_ABI_API_URL=https://puppynet-abi.s3.amazonaws.com
