--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-719/v0.0.1
+SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-719/v0.0.2
 
 # RPC URL 517 latest
 RPC_517=https://puppynet.shibrpc.com
@@ -40,7 +40,7 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-NEXT_PUBLIC_STAKING_API_URL=https://preprod-api1.shib.io
+NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
 
 # ABI/Contract address API
 NEXT_PUBLIC_ABI_API_URL=https://puppynet-abi.s3.amazonaws.com
