--- a/.env
+++ b/.env
@@ -15,7 +15,8 @@ STAKE_MANAGER=0xBec5b6141319b611246E1284085125050555e3F5
 DEPOSIT_MANAGER_PROXY=0xCBaBcDf0d1285A1486164ff35dF23cd5569c4882
 WITHDRAW_MANAGER_PROXY=0xb3C1dF4a4001ECDE3C85Ec4D0bad7fA9012fA1b4
 ROOTCHAIN_MANAGER_PROXY=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
-
+NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0x096C0bdE3b8F1ec9033d531A858569228330881c
+NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
 # Infura or Alchemy http node
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/xv2JiP-gGcBNnTwaqOoKJDj917JFIMXp
 
@@ -40,7 +41,9 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
+# NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
+NEXT_PUBLIC_STAKING_API_URL=http://10.89.4.174:3000
+# NEXT_PUBLIC_STAKING_API_URL=http://localhost:3001
 
 # ABI/Contract address API
 NEXT_PUBLIC_ABI_API_URL=https://puppynet-abi.s3.amazonaws.com
