--- a/.env
+++ b/.env
@@ -41,8 +41,8 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-# NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
-NEXT_PUBLIC_STAKING_API_URL=http://10.89.4.174:3000
+NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
+#NEXT_PUBLIC_STAKING_API_URL=http://10.89.4.174:3000
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3001
 
 # ABI/Contract address API
