bridge deposit fixed for pos tokens

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ STAKE_MANAGER=0xBec5b6141319b611246E1284085125050555e3F5
 DEPOSIT_MANAGER_PROXY=0xCBaBcDf0d1285A1486164ff35dF23cd5569c4882
 WITHDRAW_MANAGER_PROXY=0xb3C1dF4a4001ECDE3C85Ec4D0bad7fA9012fA1b4
 NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
+NEXT_PUBLIC_ERC20_PREDICATE=0x9000cdB21f406c86334ed26680A66c458d121aAc
 NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0x096C0bdE3b8F1ec9033d531A858569228330881c
 NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
 # Infura or Alchemy http node
