--- a/.env
+++ b/.env
@@ -57,3 +57,6 @@ NEXT_PUBLIC_MIN_STAKE_AMOUNT=10
 
 # Recaptcha site key
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdDZXQiAAAAAPUZI155WAGKKhM1vACSu05hOLGP
+
+# Faucet API URL
+NEXT_PUBLIC_FAUCET_API_URL=https://faucet.shib.io/api 
