--- a/.env
+++ b/.env
@@ -59,4 +59,5 @@ NEXT_PUBLIC_MIN_STAKE_AMOUNT=10
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdDZXQiAAAAAPUZI155WAGKKhM1vACSu05hOLGP
 
 # Faucet API URL
+# NEXT_PUBLIC_FAUCET_API_URL=http://localhost:5000/api 
 NEXT_PUBLIC_FAUCET_API_URL=https://faucet.shib.io/api 
