updated sepolia chainId and puppynet chain

--- a/.env
+++ b/.env
@@ -5,24 +5,24 @@
 SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-719-v1/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppynet.shibrpc.com
-
-#  chain id 917 contracts
-BONE=0x76C2BA387d39A2B3A214E0Ba1819782369F684c1
-STAKE_MANAGER_PROXY=0xcC25061DF487017c2FB6eEAe0F213fe58a2125E4
-VALIDATOR_SHARE=0x833D72AFaeD97D3FF2F88fA0311Cf89F44D16593
-STAKE_MANAGER=0xBec5b6141319b611246E1284085125050555e3F5
-DEPOSIT_MANAGER_PROXY=0xCBaBcDf0d1285A1486164ff35dF23cd5569c4882
-WITHDRAW_MANAGER_PROXY=0xb3C1dF4a4001ECDE3C85Ec4D0bad7fA9012fA1b4
+RPC_517=https://beta.shibrpc.com
+NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://puppyscan.shib.io
+#  chain id 613 contracts
+BONE=0xcA94c8B16209CCBAfCFeab9D7649DdaEcD444007
+STAKE_MANAGER_PROXY=0x60F8F4f0Bf609B4F4096B981338b8552049C8412
+VALIDATOR_SHARE=0x569EA5B5561c6B9b64B53cE3171518DDCe2363B8
+STAKE_MANAGER=0xD50418124a8F1F0c810903A80755e80eB9F50388
+DEPOSIT_MANAGER_PROXY=0xF6778e015e09521106DC7eE823056b2A6CD41BE6
+WITHDRAW_MANAGER_PROXY=0x70EdDaee16D34768b753E4144bC1c742F4DaaeD1
 NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
 NEXT_PUBLIC_ERC20_PREDICATE=0x9000cdB21f406c86334ed26680A66c458d121aAc
-NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0x096C0bdE3b8F1ec9033d531A858569228330881c
+NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0xF323f8Ce66efAc4417Dee12714663eED3891d3EF
 NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
 # Infura or Alchemy http node
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/xv2JiP-gGcBNnTwaqOoKJDj917JFIMXp
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppynet.shibrpc.com
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://beta.shibrpc.com
 NEXT_PUBLIC_HEIMDALL_RPC=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1.amazonaws.com:26657/
 NEXT_PUBLIC_HEIMDALL_REST=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1.amazonaws.com:1317/
 
