--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-719-v1/v0.0.1
+SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-613-new/v0.0.2
 
 # RPC URL 517 latest
 RPC_517=https://beta.shibrpc.com
@@ -14,27 +14,29 @@ VALIDATOR_SHARE=0x569EA5B5561c6B9b64B53cE3171518DDCe2363B8
 STAKE_MANAGER=0xD50418124a8F1F0c810903A80755e80eB9F50388
 DEPOSIT_MANAGER_PROXY=0xF6778e015e09521106DC7eE823056b2A6CD41BE6
 WITHDRAW_MANAGER_PROXY=0x70EdDaee16D34768b753E4144bC1c742F4DaaeD1
-NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
-NEXT_PUBLIC_ERC20_PREDICATE=0x9000cdB21f406c86334ed26680A66c458d121aAc
+NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0xeB18c5566F352b46f633862CfB43cd45a06a27b6
+NEXT_PUBLIC_ERC20_PREDICATE=0x10ba265c68Bd117396ce3BF94930c2bAb9b105fe
 NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0xF323f8Ce66efAc4417Dee12714663eED3891d3EF
-NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xF6bd2D1Ac619E5A5c7214D738A9B4aD6f7b5dF4B
+NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xeB18c5566F352b46f633862CfB43cd45a06a27b6
+NEXT_PUBLIC_VALIDATOR_REGISTRY=0x83Af517D033dEF5feB3Fbf7aEd626C86e434dcc2
+
 # Infura or Alchemy http node
-NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-goerli.g.alchemy.com/v2/xv2JiP-gGcBNnTwaqOoKJDj917JFIMXp
+NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-sepolia.g.alchemy.com/v2/2LWgJj6FunsU6UVRxdZXLEPbxt72JtqO
 
 # Shibarium RPC http node
 NEXT_PUBLIC_CHILD_RPC_HTTP=https://beta.shibrpc.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1.amazonaws.com:26657/
-NEXT_PUBLIC_HEIMDALL_REST=http://preprodnew-rpc-1-919a1ec3d7bc690b.elb.us-east-1.amazonaws.com:1317/
+NEXT_PUBLIC_HEIMDALL_RPC=http://beta2-rpc-1-d2465ac75179d2ef.elb.us-east-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://beta2-rpc-1-d2465ac75179d2ef.elb.us-east-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
 
 # Network info
-NEXT_PUBLIC_NET_NAME=beta
+NEXT_PUBLIC_NET_NAME=sepolia
 NEXT_PUBLIC_NET_VERS=v2
 
 # Admin wallet used to deploy contracts and run admin commands
-NEXT_PUBLIC_ADMIN_WALLET=0x0c31C42dBd5cA4Bd02b0aA5977d2Cab5A0FE948a
+NEXT_PUBLIC_ADMIN_WALLET=0xfe6b6BfAb7D789bE3994C048d0Bb7EF4a78700D7
 
 # Number of accounts to load into HDWalletProvider. If blank, defaults to 50
 NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
@@ -43,11 +45,11 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
 NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
-# NEXT_PUBLIC_STAKING_API_URL=http://10.89.4.174:3000
+# NEXT_PUBLIC_STAKING_API_URL=http://10.97.5.161:3000
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3001
 
 # ABI/Contract address API
-NEXT_PUBLIC_ABI_API_URL=https://puppynet-abi.s3.amazonaws.com
+NEXT_PUBLIC_ABI_API_URL=https://beta-abi.s3.amazonaws.com
 
 # Service health check timeout, in ms
 NEXT_PUBLIC_HEALTH_CHECK_TIMOUT=5000
