--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-613-new/v0.0.2
+SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-613-new/v0.0.3
 
 # RPC URL 517 latest
 RPC_517=https://beta.shibrpc.com
@@ -44,8 +44,8 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
-# NEXT_PUBLIC_STAKING_API_URL=http://10.97.5.161:3000
+# NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
+NEXT_PUBLIC_STAKING_API_URL=http://10.97.5.161:3000
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3001
 
 # ABI/Contract address API
