--- a/.env
+++ b/.env
@@ -2,41 +2,41 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-613-new/v0.0.3
+SUBH_GRAPH_URL=subgraph = https://api.studio.thegraph.com/query/50882/shibarium/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://beta.shibrpc.com
-NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://puppyscan.shib.io
+RPC_517=https://puppnet-test.shibrpc.com
+NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://shibariumscan.io
 #  chain id 613 contracts
-BONE=0xcA94c8B16209CCBAfCFeab9D7649DdaEcD444007
-STAKE_MANAGER_PROXY=0x60F8F4f0Bf609B4F4096B981338b8552049C8412
-VALIDATOR_SHARE=0x569EA5B5561c6B9b64B53cE3171518DDCe2363B8
-STAKE_MANAGER=0xD50418124a8F1F0c810903A80755e80eB9F50388
-DEPOSIT_MANAGER_PROXY=0xF6778e015e09521106DC7eE823056b2A6CD41BE6
-WITHDRAW_MANAGER_PROXY=0x70EdDaee16D34768b753E4144bC1c742F4DaaeD1
-NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0xeB18c5566F352b46f633862CfB43cd45a06a27b6
-NEXT_PUBLIC_ERC20_PREDICATE=0x10ba265c68Bd117396ce3BF94930c2bAb9b105fe
-NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0xF323f8Ce66efAc4417Dee12714663eED3891d3EF
-NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xeB18c5566F352b46f633862CfB43cd45a06a27b6
-NEXT_PUBLIC_VALIDATOR_REGISTRY=0x83Af517D033dEF5feB3Fbf7aEd626C86e434dcc2
+BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
+STAKE_MANAGER_PROXY=0x65218A41Fb92637254B4f8c97448d3dF343A3064
+VALIDATOR_SHARE=0xD59C6d8CDEDc5B6336BF599A69336cC222cfc62c
+STAKE_MANAGER=0x51abA8b28eD0366665e74C7869DeaEa926d4C9d8
+DEPOSIT_MANAGER_PROXY=0x885fcE983b6a01633f764325B8c3c5D31032C995
+WITHDRAW_MANAGER_PROXY=0x5F683665ca87dbC3D1358913da80e3C71c328Fb0
+NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0x08C4b60fda8aA6239b7de7d165BCF6F1686Cad82
+NEXT_PUBLIC_ERC20_PREDICATE=0xfffC2D781999F09A8b127f8Ef419a3EeD2EDa1dd
+NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0xa700BCC4E31BFE9375f5f55cD6fD133323F911D6
+NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0x08C4b60fda8aA6239b7de7d165BCF6F1686Cad82
+NEXT_PUBLIC_VALIDATOR_REGISTRY=0x53D63B9523Ab13399e2071BB4056bbc7Bf98e6A6
 
 # Infura or Alchemy http node
-NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-sepolia.g.alchemy.com/v2/2LWgJj6FunsU6UVRxdZXLEPbxt72JtqO
+NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_yAXFkhesI1edQi-n
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https://beta.shibrpc.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://beta2-rpc-1-d2465ac75179d2ef.elb.us-east-1.amazonaws.com:26657/
-NEXT_PUBLIC_HEIMDALL_REST=http://beta2-rpc-1-d2465ac75179d2ef.elb.us-east-1.amazonaws.com:1317/
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppnet-test.shibrpc.com
+NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-96382f6cfd166360.elb.us-east-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-96382f6cfd166360.elb.us-east-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
 
 # Network info
-NEXT_PUBLIC_NET_NAME=sepolia
-NEXT_PUBLIC_NET_VERS=v2
+NEXT_PUBLIC_NET_NAME=shibarium-mainnet
+NEXT_PUBLIC_NET_VERS=v1
 
 # Admin wallet used to deploy contracts and run admin commands
-NEXT_PUBLIC_ADMIN_WALLET=0xfe6b6BfAb7D789bE3994C048d0Bb7EF4a78700D7
+NEXT_PUBLIC_ADMIN_WALLET=0x80Cc222EA02F4334F67e9E55E7412fed62599004
 
 # Number of accounts to load into HDWalletProvider. If blank, defaults to 50
 NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
@@ -45,11 +45,11 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
 # NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
-NEXT_PUBLIC_STAKING_API_URL=http://10.97.5.161:3000
+NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.249:3000 
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3001
 
 # ABI/Contract address API
-NEXT_PUBLIC_ABI_API_URL=https://beta-abi.s3.amazonaws.com
+NEXT_PUBLIC_ABI_API_URL=https://prod-abi.s3.amazonaws.com
 
 # Service health check timeout, in ms
 NEXT_PUBLIC_HEALTH_CHECK_TIMOUT=5000
