--- a/.env.local
+++ b/.env.local
@@ -1,21 +1,19 @@
 
 # 517 ENV DATA , URLS AND CONTRACTS
 
-# subh graph URL 
-SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/33694/shibarium-613-new/v0.0.3
+SUBH_GRAPH_URL=subgraph = https://api.studio.thegraph.com/query/50882/shibarium/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://beta.shibrpc.com
-
-# chain id 517 contracts 
-BONE=0xcA94c8B16209CCBAfCFeab9D7649DdaEcD444007
-STAKE_MANAGER_PROXY=0x60F8F4f0Bf609B4F4096B981338b8552049C8412
-VALIDATOR_SHARE=0x569EA5B5561c6B9b64B53cE3171518DDCe2363B8
-STAKE_MANAGER=0xD50418124a8F1F0c810903A80755e80eB9F50388
-DEPOSIT_MANAGER_PROXY=0xF6778e015e09521106DC7eE823056b2A6CD41BE6
-WITHDRAW_MANAGER_PROXY=0x70EdDaee16D34768b753E4144bC1c742F4DaaeD1
-NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0xeB18c5566F352b46f633862CfB43cd45a06a27b6
-NEXT_PUBLIC_ERC20_PREDICATE=0x10ba265c68Bd117396ce3BF94930c2bAb9b105fe
-NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0xF323f8Ce66efAc4417Dee12714663eED3891d3EF
-NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0xeB18c5566F352b46f633862CfB43cd45a06a27b6
- 
+RPC_517=https://puppnet-test.shibrpc.com
+#  chain id 613 contracts
+BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
+STAKE_MANAGER_PROXY=0x65218A41Fb92637254B4f8c97448d3dF343A3064
+VALIDATOR_SHARE=0xD59C6d8CDEDc5B6336BF599A69336cC222cfc62c
+STAKE_MANAGER=0x51abA8b28eD0366665e74C7869DeaEa926d4C9d8
+DEPOSIT_MANAGER_PROXY=0x885fcE983b6a01633f764325B8c3c5D31032C995
+WITHDRAW_MANAGER_PROXY=0x5F683665ca87dbC3D1358913da80e3C71c328Fb0
+NEXT_PUBLIC_ROOTCHAIN_MANAGER_PROXY=0x08C4b60fda8aA6239b7de7d165BCF6F1686Cad82
+NEXT_PUBLIC_ERC20_PREDICATE=0xfffC2D781999F09A8b127f8Ef419a3EeD2EDa1dd
+NEXT_PUBLIC_WITHDRAW_PLASMA_EXIT_CONTRACT=0xa700BCC4E31BFE9375f5f55cD6fD133323F911D6
+NEXT_PUBLIC_WITHDRAW_POS_EXIT_CONTRACT=0x08C4b60fda8aA6239b7de7d165BCF6F1686Cad82
+NEXT_PUBLIC_VALIDATOR_REGISTRY=0x53D63B9523Ab13399e2071BB4056bbc7Bf98e6A6
