--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,7 @@
 SUBH_GRAPH_URL=subgraph = https://api.studio.thegraph.com/query/50882/shibarium/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppnet-test.shibrpc.com
+RPC_517=https://puppynet-test.shibrpc.com
 #  chain id 613 contracts
 BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
 STAKE_MANAGER_PROXY=0x65218A41Fb92637254B4f8c97448d3dF343A3064
