--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 SUBH_GRAPH_URL=subgraph = https://api.studio.thegraph.com/query/50882/shibarium/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppnet-test.shibrpc.com
+RPC_517=https://puppynet-test.shibrpc.com
 NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://shibariumscan.io
 #  chain id 613 contracts
 BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
@@ -24,7 +24,7 @@ NEXT_PUBLIC_VALIDATOR_REGISTRY=0x53D63B9523Ab13399e2071BB4056bbc7Bf98e6A6
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_yAXFkhesI1edQi-n
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppnet-test.shibrpc.com
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppynet-test.shibrpc.com
 NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-96382f6cfd166360.elb.us-east-1.amazonaws.com:26657/
 NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-96382f6cfd166360.elb.us-east-1.amazonaws.com:1317/
 
