--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 517 ENV DATA , URLS AND CONTRACTS
 
 # subh graph URL 
-SUBH_GRAPH_URL=subgraph = https://api.studio.thegraph.com/query/50882/shibarium/v0.0.1
+SUBH_GRAPH_URL= https://api.studio.thegraph.com/query/50882/shibarium/v0.0.1
 
 # RPC URL 517 latest
 RPC_517=https://puppynet-test.shibrpc.com
