major changes in flow

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ SUBH_GRAPH_URL= https://api.studio.thegraph.com/query/50963/shibarium/v0.0.1
 RPC_517=https://puppynet-test.shibrpc.com
 NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://shibariumscan.io
 #  chain id 613 contracts
+NEXT_PUBLIC_BONE_ID="BONE SHIBASWAP"
 BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
 STAKE_MANAGER_PROXY=0x65218A41Fb92637254B4f8c97448d3dF343A3064
 VALIDATOR_SHARE=0xD59C6d8CDEDc5B6336BF599A69336cC222cfc62c
@@ -25,8 +26,8 @@ NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_y
 
 # Shibarium RPC http node
 NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppynet-test.shibrpc.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-96382f6cfd166360.elb.us-east-1.amazonaws.com:26657/
-NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-96382f6cfd166360.elb.us-east-1.amazonaws.com:1317/
+NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-f7ef524857adf3aa.elb.us-east-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-f7ef524857adf3aa.elb.us-east-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
@@ -45,8 +46,8 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
 # NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
-NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.249:3000 
-# NEXT_PUBLIC_STAKING_API_URL=http://localhost:3001
+NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.249:3000
+# NEXT_PUBLIC_STAKING_API_URL=http://localhost:3002
 
 # ABI/Contract address API
 NEXT_PUBLIC_ABI_API_URL=https://prod-abi.s3.amazonaws.com
