--- a/.env.production
+++ b/.env.production
@@ -6,6 +6,7 @@ SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/50963/shibarium/v0.0.1
 # RPC URL 517 latest
 RPC_517=https://puppynet-test.shibrpc.com
 #  chain id 613 contracts
+NEXT_PUBLIC_BONE_ID="BONE SHIBASWAP"
 BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
 STAKE_MANAGER_PROXY=0x65218A41Fb92637254B4f8c97448d3dF343A3064
 VALIDATOR_SHARE=0xD59C6d8CDEDc5B6336BF599A69336cC222cfc62c
