--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 SUBH_GRAPH_URL= https://api.studio.thegraph.com/query/50963/shibarium/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://puppynet-test.shibrpc.com
+RPC_517=https://shibrpc.com
 NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://shibariumscan.io
 #  chain id 613 contracts
 NEXT_PUBLIC_BONE_ID="BONE SHIBASWAP"
@@ -45,8 +45,8 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-# NEXT_PUBLIC_STAKING_API_URL=https://preprod-api.shib.io
-NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.249:3000
+NEXT_PUBLIC_STAKING_API_URL=https://api.shib.io
+# NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.249:3000
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3002
 
 # ABI/Contract address API
