--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ NEXT_PUBLIC_VALIDATOR_REGISTRY=0x53D63B9523Ab13399e2071BB4056bbc7Bf98e6A6
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_yAXFkhesI1edQi-n
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https://puppynet-test.shibrpc.com
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://shibrpc.com
 NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-f7ef524857adf3aa.elb.us-east-1.amazonaws.com:26657/
 NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-f7ef524857adf3aa.elb.us-east-1.amazonaws.com:1317/
 
