--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@
 SUBH_GRAPH_URL=https://api.studio.thegraph.com/query/50963/shibarium/v0.0.1
 
 # RPC URL 517 latest
-RPC_517=https://shibrpc.com
+RPC_517=https://www.shibrpc.com
 #  chain id 613 contracts
 NEXT_PUBLIC_BONE_ID="BONE SHIBASWAP"
 BONE=0x9813037ee2218799597d83D4a5B6F3b6778218d9
