--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ NEXT_PUBLIC_VALIDATOR_REGISTRY=0x53D63B9523Ab13399e2071BB4056bbc7Bf98e6A6
 NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_yAXFkhesI1edQi-n
 
 # Shibarium RPC http node
-NEXT_PUBLIC_CHILD_RPC_HTTP=https:/internal-prod.shibrpc.com
+NEXT_PUBLIC_CHILD_RPC_HTTP=https://internal-prod.shibrpc.com
 NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-7c98e4bb0ce5a248.elb.us-east-1.amazonaws.com:26657/
 NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-7c98e4bb0ce5a248.elb.us-east-1.amazonaws.com:1317/
 
