--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_y
 
 # Shibarium RPC http node
 NEXT_PUBLIC_CHILD_RPC_HTTP=https://internal-prod.shibrpc.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-1-7c98e4bb0ce5a248.elb.us-east-1.amazonaws.com:26657/
-NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-1-7c98e4bb0ce5a248.elb.us-east-1.amazonaws.com:1317/
+NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-2-8417734e2031c741.elb.ap-southeast-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-2-8417734e2031c741.elb.ap-southeast-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
