--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ NEXT_PUBLIC_ROOT_RPC_HTTP=https://eth-mainnet.g.alchemy.com/v2/KWZGsggq6oF1aCI_y
 
 # Shibarium RPC http node
 NEXT_PUBLIC_CHILD_RPC_HTTP=https://internal-prod.shibrpc.com
-NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-2-8417734e2031c741.elb.ap-southeast-1.amazonaws.com:26657/
-NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-2-8417734e2031c741.elb.ap-southeast-1.amazonaws.com:1317/
+NEXT_PUBLIC_HEIMDALL_RPC=http://prod-rpc-2-f3889c03bd850501.elb.ap-southeast-1.amazonaws.com:26657/
+NEXT_PUBLIC_HEIMDALL_REST=http://prod-rpc-2-f3889c03bd850501.elb.ap-southeast-1.amazonaws.com:1317/
 
 # Wallet mnemonic
 NEXT_PUBLIC_MNEMONIC=sweet mask mansion forward grunt bench climb opera buzz gentle course boring
@@ -44,8 +44,8 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-# NEXT_PUBLIC_STAKING_API_URL=https://api.shib.io
-NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.77:3000
+NEXT_PUBLIC_STAKING_API_URL=https://api.shib.io
+#NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.77:3000
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3002
 
 # ABI/Contract address API
