--- a/.env
+++ b/.env
@@ -44,7 +44,7 @@ NEXT_PUBLIC_PROVIDER_NUM_ACCOUNTS=30
 # Proof Generator API
 NEXT_PUBLIC_PROOF_API_URL=http:3.85.222.188:5000
 # Staking API
-NEXT_PUBLIC_STAKING_API_URL=https://api.shib.io
+NEXT_PUBLIC_STAKING_API_URL=https://shibarium-api.shib.io
 #NEXT_PUBLIC_STAKING_API_URL=http://10.98.3.77:3000
 # NEXT_PUBLIC_STAKING_API_URL=http://localhost:3002
 
