--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "@web3modal/react": "^2.0.0-beta.10",
     "bootstrap": "^5.2.1",
     "cids": "^1.1.9",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
