--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@shibarmy/shibariumjs": "^0.1.0",
     "@shibarmy/shibariumjs-plasma": "^0.1.0",
     "@shibarmy/shibariumjs-web3": "^0.1.0",
+    "@tanstack/react-query": "^4.35.0",
     "@truffle/hdwallet-provider": "^2.1.5",
     "@web3modal/ethereum": "^2.0.0-beta.10",
     "@web3modal/react": "^2.0.0-beta.10",
